--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "tsc -p tsconfig.test.json && tsc-alias -p tsconfig.test.json"
   },
   "dependencies": {
     "@minecraft/server": "^2.1.0-beta",
     "@minecraft/server-ui": "^1.3.0"
   },
   "devDependencies": {
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.8.2"
   }
 }
